<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SplitTheCost</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="numPeople">人数：</string>
    <string name="people">人</string>
    <string name="money">金額：</string>
    <string name="yen">円</string>
    <string name="calc">計算</string>
    <string name="oneMoney">一人当たりの金額</string>
    <string name="result">xxxx</string>
    <string name="fraction">端数</string>
	<string name="dlg_fraction_title">端数を選択してください</string>
	<string name="roundup_title">端数切り上げ</string>
	<string name="setting_name">設定</string>
	
</resources>
